--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd --respawn --transpile-only src/main.ts",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
+    "@types/pg": "^8.11.8",
     "eslint": "^9.10.0",
+    "express": "^4.20.0",
     "globals": "^15.9.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
+  },
+  "dependencies": {
+    "pg": "^8.12.0"
   }
 }
