--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=
 
 URL_POSTGRES=
+
+PORT=
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+TWILIO_STATUS_CALLBACK_URL=
