--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/pg": "^8.11.8",
     "eslint": "^9.10.0",
-    "express": "^4.20.0",
     "globals": "^15.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
   },
   "dependencies": {
-    "pg": "^8.12.0"
+    "express": "^4.20.0",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.12.0",
+    "twilio": "^5.3.0"
   }
 }
